--- a/html/public/plus_search.html
+++ b/html/public/plus_search.html
@@ -184,7 +184,78 @@
 			    width: 100%;
 			    color: #eee;
 			    font-size: 14px;
-			}				
+			}
+			
+			/*文章列表样式*/		
+			.mui-table-view-cell>a:not(.mui-btn) {
+				margin: auto;
+				padding: 0px;
+			}		
+			.article-title {
+				font-size: 17px;
+				color: #333;
+				overflow: hidden;
+				display: -webkit-box;
+				-webkit-box-orient: vertical;
+				-webkit-line-clamp: 2;
+				white-space: normal;
+				line-height: 25px;
+				height: 50px;
+			}
+			
+			.article-title.special {
+				height: 25px;
+			}
+			
+			.mui-table-view .mui-media-object {
+				height: 75px;
+				max-width: 103px;
+			}
+			
+			p.mui-ellipsis {
+				font-size: 11px;
+				color: #999;
+				margin-top: 4px;
+			}
+			
+			.mui-media .iconfont {
+				vertical-align: middle;
+			}
+			
+			.mui-media-body ul.mui-grid-view {
+				padding: 0px;
+			}
+			
+			.mui-media-body ul.mui-grid-view:before {
+				height: 0px;
+			}
+			
+			.mui-media-body ul.mui-grid-view:after {
+				height: 0px;
+			}
+			
+			.mui-media-body ul.mui-grid-view li.mui-table-view {
+				display: inline-block;
+				padding: 10px 0 0 0px;
+				text-align: center;
+				vertical-align: middle;
+				background: 0 0;
+			}
+			
+			.mui-media-body ul.mui-grid-view li:not(:last-child) {
+				padding-right: 5px;
+			}
+			
+			.mui-media-body ul.mui-grid-view li.mui-table-view:before,
+			.mui-media-body ul.mui-grid-view li.mui-table-view:after {
+				height: 0px;
+			}
+			
+			.mui-media-body ul.mui-grid-view li.mui-table-view img {
+				max-width: 100%;
+				width: 100%;
+			}
+			
 		</style>
 	</head>
 
@@ -255,7 +326,7 @@
 						<span class="mui-icon mui-icon-trash">清空</span>
 					</p>
 				</h5>
-				<ul class="mui-table-view history-ul">
+				<ul class="mui-table-view history-ul" id="history-ul">
 					<li class="mui-table-view-cell">
 						<span class="mui-icon iconfont icon-liulanjilu"></span>大数据人工智能
 						<span class="mui-icon ui-icon mui-icon-closeempty mui-pull-right"></span>
@@ -270,10 +341,15 @@
 					</li>
 				</ul>
 			</div>
+			<div class="search-content">
+				<ul id="articleUl"></ul>
+			</div>
 		</div>
 		<script src="../../vendor/jQuery/jquery.min.js"></script>
 		<script src="../../js/mui.min.js"></script>
 		<script>	
+			var pageSize = 10, pageNum = 1;
+			mui.init();
 			$(document).ready(function() {
 				//猜你想搜的   查看更多是否显示
 				var $box = $('.more-box');
@@ -302,6 +378,7 @@
 			});
 
 			mui('.mui-content').on('tap', '#cancelSearch', function() {
+				document.getElementById('searchInput').value = '';
 				mui.back();
 			});
 
@@ -352,6 +429,129 @@
 				$('.show-wanna-search').show();
 				$('.mui-card-content').show();
 			});
+			
+			
+			document.getElementById('searchInput').addEventListener('keydown', function(e){
+				if(13 == e.keyCode){
+					var text = this.value;
+					if(!text){
+						mui.toast('请输入要搜索的内容');
+						return ;
+					}
+					$('.wanna-search-box').hide();
+					$('.search-history').hide();
+					$('.search-content').show();
+					var _li = '<li class="mui-table-view-cell">' 
+								+ '<span class="mui-icon iconfont icon-liulanjilu"></span>' + text
+								+ '<span class="mui-icon ui-icon mui-icon-closeempty mui-pull-right"></span>' 
+							+ '</li>';
+					$('#history-ul').prepend(_li);
+					console.log(text)
+					searchArticle(text);					
+				}
+			});
+			
+			mui('.search-box').on('tap', '.mui-icon-clear', function(e){
+				$('.wanna-search-box').show();
+				$('.search-history').show();
+				$('.search-content').empty().hide();
+			});
+			
+			
+			mui('.history-ul').on('tap', '.mui-icon-closeempty', function(){
+				
+			});
+				
+			//请求数据 添加数据	
+			function searchArticle(text){
+				mui.ajax('http://58.16.181.24:9203/mis-app/VisitingCard/articleType', {
+					data: {
+						page_no: pageNum,
+						page_size: pageSize,
+						sortType: 'desc',
+						sortField: 'publishTime',
+						all: text
+					},
+					success: function(data){
+						var list = data.list;
+						console.log(JSON.stringify(list))
+						addData(list);
+					},
+					error: function(xhr, type, errorThrown) {
+						//异常处理；
+						console.error(xhr);
+						console.error(type);
+					}
+				})
+			}
+			
+			function addData(articleList){
+				var table = $('#articleUl');
+				for(var i = 0; i < articleList.length; i++) {
+					var img = articleList[i].images;
+					var $li = $('<li class="mui-table-view-cell mui-media"></li>');
+
+					//根据图片个数 显示不同的样式列表
+					if(!img) {
+						$li.append('<a javascript:; data-guid="' + articleList[i].id + '">' +
+							'<div class="mui-media-body">' +
+							'<div class="article-title">' + articleList[i].title + '</div>' +
+							'<p class="mui-ellipsis">' +
+							'<span class="source">' + articleList[i].siteName + '</span> &nbsp;&nbsp;' +
+							'<span class="time">' + formatDate(articleList[i].publishTime) + '</span></p>' +
+							'</div>' +
+							'</a>');
+					} else if(img.length < 3) {
+						$li.append('<a javascript:; data-guid="' + articleList[i].id + '">' +
+							'<img class="mui-media-object mui-pull-right" src="' + img[0] + '">' +
+							'<div class="mui-media-body">' +
+							'<div class="article-title">' + articleList[i].title + '</div>' +
+							'<p class="mui-ellipsis">' +
+							'<span class="source">' + articleList[i].siteName + '</span> &nbsp;&nbsp;' +
+							'<span class="time">' + formatDate(articleList[i].publishTime) + '</span></p>' +
+							'</div>' +
+							'</a>');
+					} else {
+						var imgUl = '<ul class="mui-table-view mui-grid-view">';
+						for(var j = 0; j < 3; j++) {
+							imgUl = imgUl + '<li class="mui-table-view mui-media mui-col-xs-4"><img class="mui-media-object" src="' + img[j] + '"></li>';
+						}
+						imgUl += '</ul>';
+						$li.append('<a javascript:; data-guid="' + articleList[i].id + '">' +
+							'<div class="mui-media-body">' +
+							'<div class="article-title special">' + articleList[i].title + '</div>' +
+							imgUl +
+							'</div>' +
+							'</a>' +
+							'<p class="mui-ellipsis">' +
+							'<span class="source">' + articleList[i].siteName + '</span> &nbsp;&nbsp;' +
+							'<span class="time">' + formatDate(articleList[i].publishTime) + '</span>' +
+							'</p>'
+						);
+					}
+
+					table.append($li);
+				}
+			}
+			
+			function formatDate(date) {
+				var date1 = new Date(date),
+					now = new Date();
+				var milliseconds = now.getTime() - date1.getTime(),
+					timeSpanStr = '';
+				if(milliseconds <= 1000 * 60 * 1) {
+					timeSpanStr = '刚刚';
+				} else if(1000 * 60 * 1 < milliseconds && milliseconds <= 1000 * 60 * 60) {
+					timeSpanStr = Math.round((milliseconds / (1000 * 60))) + '分钟前';
+				} else if(1000 * 60 * 60 * 1 < milliseconds && milliseconds <= 1000 * 60 * 60 * 24) {
+					timeSpanStr = Math.round(milliseconds / (1000 * 60 * 60)) + '小时前';
+				} else if(1000 * 60 * 60 * 24 < milliseconds && milliseconds <= 1000 * 60 * 60 * 24 * 15) {
+					timeSpanStr = Math.round(milliseconds / (1000 * 60 * 60 * 24)) + '天前';
+				} else {
+					timeSpanStr = date.substring(5, 10) + ' ' + date.substring(11, 16);
+				}
+				return timeSpanStr;
+			}
 		</script>
 	</body>
 </html>
