--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -83,10 +83,10 @@
 						<div class="img-box mui-pull-left">
 							<img id="head-img" class="userImg">
 						</div>
-						<div class="mui-media-body noLoginBox" style="display: none;">
+						<div class="mui-media-body noLoginBox">
 							登录科技头条 体验更多功能
 						</div>
-						<div class="mui-media-body userNameBox">
+						<div class="mui-media-body userNameBox" style="display: none;">
 							<h4 class="userName">卖火柴的小女孩</h4>
 							<h6 class="info mui-ellipsis">这家伙很懒，什么都么留下这家伙很懒，什么都么留下</h6>
 						</div>
