添加频道接口  推荐频道接口

--- a/html/card/index.html
+++ b/html/card/index.html
@@ -125,9 +125,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="plus-box">
+			<!--<div class="plus-box">
 				<a href="javascript:;" data-wid="plus_channel" class="plus_btn"><span class="mui-icon mui-icon-plusempty"></span></a>
-			</div>
+			</div>-->
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/webviewGroup.js" type="text/javascript" charset="utf-8"></script>
