--- a/html/login/registInfo.html
+++ b/html/login/registInfo.html
@@ -94,20 +94,25 @@
 					}
 
 					console.log(md5(pwd) + '-----' + userName + '-----' + md5Code + '-----' + phoneNum + '-------------' + userImg)
-					mui.ajax('http://172.168.17.13:8080/mis-app/public/register', {
+					mui.ajax('http://172.168.17.60:8080/mis-app/public/register', {
+						type: 'POST',
 						data: {
 							password: md5(pwd),
 							userName: 　userName,
 							md5Code: md5Code,
 							phone: phoneNum,
-							personImages: ''
+							personImages: userImg
 						},
 						success: function(result) {
 							console.log(JSON.stringify(result))
 							var status = result.status;
 							if(status == 0) {
-								console.log(JSON.stringify(result.data))
-								mui.toast('注册成功')
+								mui.toast('注册成功');
+								//信息保存在session里
+								var wn = plus.webview.getElementById('login.html');
+								var curWn = plus.webview.currentWebview();
+								curWn.close();
+								wn.open();
 							}else{
 								mui.toast(status.msg);
 							}
