收藏文章接口

--- a/html/myCenter/history.html
+++ b/html/myCenter/history.html
@@ -26,8 +26,8 @@
 		<script>
 			mui.init({
 			    subpages:[{
-			      url:'../public/articleList.html',
-			      id:'articleList.html',
+			      url:'../public/collectList.html',
+			      id:'collectList.html',
 			      styles:{
 			        top:'45px',//mui标题栏默认高度为45px；
 			        bottom:'0px'//默认为0px，可不定义；
