--- a/html/index/plus_channel.html
+++ b/html/index/plus_channel.html
@@ -238,6 +238,7 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/sortable.js"></script>
+		<script src="../../vendor/jQuery/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init({
 				gestureConfig: {
@@ -359,13 +360,17 @@
 			getChannels();
 
 			function addRecommendChannel(list) {
-				console.log(list)
 				var ul = document.getElementById('recommend_channel');
 				for(var i = 0; i < list.length; i++) {
 					var li = document.createElement('li');
 					li.setAttribute('dataId', list[i].id);
-					li.innerHTML = '<div class="channel_item"><div class="channel drag-channel"><span class="mui-icon mui-icon-plusempty"></span>' 
-									+ '<span class="channel_name">' + list[i].channel_theme + '</span></div></div>';
+					li.setAttribute("channelId", list[i].channel_id);
+					li.innerHTML = '<div class="channel_item">' +
+						'<div class="channel drag-channel">' +
+						'<span class="mui-icon mui-icon-plusempty"></span>' +
+						'<span class="channel_name">' + list[i].channel_theme + '</span>' +
+						'</div>' +
+						'</div>';
 					ul.appendChild(li);
 				}
 			}
@@ -377,6 +382,7 @@
 					li.className = 'my-channel-li';
 					li.setAttribute('data-li', i + 1);
 					li.setAttribute('dataId', list[i].id);
+					li.setAttribute('channelId', list[i].channel_id);
 					li.innerHTML = '<div class="channel_item">' +
 						'<div class="channel drag-channel">' + list[i].channel_theme + '</div>' +
 						'<span class="channel-index">' + (i + 1) + '</span>' +
@@ -387,28 +393,47 @@
 
 				[].forEach.call(document.querySelectorAll(".icon-remove"), function(item, index) {
 					item.addEventListener('tap', function() {
-						var dataId = this.parentNode.parentNode.getAttribute('dataId');
-						deleteMyChannel(dataId, this);
+						var dataId = this.parentNode.parentNode.getAttribute('dataId'),
+							channelId = this.parentNode.parentNode.getAttribute('channelId'),
+							channelName = $(this).siblings('.drag-channel').text(); //不会用原生js获取啊啊啊
+						deleteMyChannel(dataId, channelId, channelName, this);
 					});
 				});
 			}
 
-			function deleteMyChannel(dataId, source) {
+			function deleteMyChannel(dataId, channelId, channelName, source) {
+				var session = JSON.parse(localStorage.getItem('$state'));
+				if(!session.userId) {
+					mui.toast('请先登录');
+					return;
+				}
 				mui.ajax('http://172.168.17.60:8080/mis-app/Personal/formProcessing', {
 					data: {
-						"jdbcTemplateName": "mysqlTemplate",
-						"pFile": "Personal",
-						"pKey": "deletechannel",
-						"myKey": "mychannel",
-						"id": dataId
+						"jdbcTemplateName": "mysqlTemplate,mysqlTemplate",
+						"pFile": "Personal,Personal",
+						"pKey": "deletechannel,updaterecommend",
+						"user_id": session.userId,
+						"channel_id": channelId,
 					},
 					success: function(result) {
-						if(result.status == 'success') {
-							source.parentNode.parentNode.removeChild(this.parentNode);
+						var data = JSON.parse(result);
+						if(data.status == 'success') {
+							//我的频道删除该标签
+							$(source).closest('li').remove();
+							//推荐频道增加该标签
+							var arr = [];
+							arr.push({
+								id: dataId,
+								channel_theme: channelName,
+								channel_id: channelId
+							});
+							addRecommendChannel(arr);
 						}
 					},
 					error: function(xhr, type, errorThrown) {
+						console.error(JSON.stringify(xhr))
 						console.error(type);
+						console.error(JSON.stringify(errorThrown))
 					}
 				});
 			}
@@ -432,32 +457,43 @@
 				mui('.mui-content').on('tap', '#recommend_channel li', function() {
 					var session = JSON.parse(localStorage.getItem('$state')),
 						dataId = this.getAttribute('dataId'),
-						channelName = this.querySelector('channel_name').innerText,
+						channelId = this.getAttribute('channelId'),
+						channelName = $(this).find('.channel_name').text(),
 						_this = this;
-
+					if(!session.userId) {
+						mui.toast('请先登录');
+					}
 					mui.ajax('http://172.168.17.60:8080/mis-app/Personal/formProcessing', {
 						data: {
 							"user_id": session.userId,
-							"channel_id": dataId,
+							"channel_id": channelId,
 							"jdbcTemplateName": "mysqlTemplate,mysqlTemplate",
 							"pFile": "Personal,Personal",
 							"pKey": "addchannel,deleterecommend"
 						},
 						success: function(result) {
-							if(result.result == 'success') {
+							var data = JSON.parse(result);
+							if(data.status == 'success') {
 								//我的频道插入值
 								var index = document.getElementsByClassName('my-channel-li').length;
 								var li = document.createElement('li');
 								li.className = 'my-channel-li';
 								li.setAttribute('data-li', index + 1);
-								li.setAttribute('dataId', dataId);
+								li.setAttribute('channelId', channelId);
 								li.innerHTML = '<div class="channel_item">' +
 									'<div class="channel drag-channel">' + channelName + '</div>' +
 									'<span class="channel-index">' + (index + 1) + '</span>' +
 									'<span class="mui-icon mui-icon-close icon-remove"></span>' +
 									'</div>';
 								document.getElementById('my_channel').appendChild(li);
+								$(li).find('.icon-remove').on('tap', function() {
+									var dataId = this.parentNode.parentNode.getAttribute('dataId'),
+										channelId = this.parentNode.parentNode.getAttribute('channelId'),
+										channelName = $(this).siblings('.drag-channel').text(); //不会用原生js获取啊啊啊
+									deleteMyChannel(dataId, channelId, channelName, this);
+								});
 								//推荐频道删除该标签
+								$(_this).remove();
 							}
 						},
 						error: function(xhr, type, errorThrown) {
