--- a/html/login/login.html
+++ b/html/login/login.html
@@ -74,7 +74,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.enterfocus.js"></script>
 		<script src="../../js/md5.min.js"></script>
-		<script src="../../js/login.js"></script>
+		<script src="../../js/app.js"></script>
 		<script>
 			(function($, doc) {
 				$.init({
@@ -89,29 +89,12 @@
 						"id": 'main',
 						"url": '../myCenter/index.html'
 					});
-					var main_loaded_flag = false;
-					mainPage.addEventListener("loaded",function () {
-						main_loaded_flag = true;
-					});
 					var toMain = function() {
-						var w =  plus.webview.currentWebview();
-						w.close();
-//						clearInterval(id);
-						$.fire(mainPage, 'show', null);
-						mainPage.show("pop-in");
-						$.fire(mainPage, 'getUserInfo');
-						//使用定时器的原因：
-						//可能执行太快，main页面loaded事件尚未触发就执行自定义事件，此时必然会失败
-//						var id = setInterval(function () {
-//							console.log(main_loaded_flag)
-//							if(main_loaded_flag){
-//								var w =  plus.webview.currentWebview();
-//								w.close();
-//								clearInterval(id);
-//								$.fire(mainPage, 'show', null);
-//								mainPage.show("pop-in");
-//							}
-//						},20);
+						var cur = plus.webview.currentWebview();;
+						plus.webview.close(cur);
+						var w = plus.webview.getWebviewById('./html/myCenter/index.html');
+						$.fire(w, 'show', null);
+						w.show();
 					};
 					//检查 "登录状态/锁屏状态" 开始
 					if (settings.autoLogin && state.token && settings.gestures) {
